[package]
name = "rushlink-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.20.1"
blake3 = "1.3.3"
rand_core = "0.6.4"
aes-gcm-siv = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3.0"
